# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,16 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import announcementsRouter from "./announcements";
+import eventsRouter from "./events";
+import coursesRouter from "./courses";
+import contactRouter from "./contact";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use("/announcements", announcementsRouter);
+router.use("/events", eventsRouter);
+router.use("/courses", coursesRouter);
+router.use("/contact", contactRouter);
 
 export default router;
